<resources>
    <string name="app_name">DinnerDecider2</string>
    <string name="action_settings">Settings</string>
    <string name="chinese">Chinese</string>
    <string name="decidericon">deciderIcon</string>
    <string name="decide">Decide!</string>
    <string name="add_food">ADD FOOD</string>
    <string name="add_new_food">Add New Food...</string>
    <string name="button">Button</string>
</resources>
